<resources>
    <string name="app_name">MasterRecylerView</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="linear_option">Linear RecyclerView</string>
    <string name="grid_option">Grid RecyclerView</string>
    <string name="staggered_grid_option">StaggeredGrid RecyclerView</string>
    <string name="image_of_destiny_travel">Image of destiny travel</string>
    <string name="button_remove_random_item">Button remove random item</string>
    <string name="refresh">Refresh</string>
    <string name="gestures_option">Drag and Swipe Gestures</string>
    <string name="selections">Selections</string>
    <string name="photo">Photo</string>
    <string name="profile_picture">Profile picture</string>
    <string name="action_delete">Delete</string>
    <string name="action_selected">%d selected</string>
    <string name="action_select_all">Select all</string>
    <string name="multiple_listeners">Multiple Listeners</string>
    <string name="pagination">Pagination</string>
    <string name="search">Search</string>
    <string name="cd_card_item_image">Image of a pokemon</string>
    <string name="fav_button">Favorite button</string>
    <string name="btn_call">Call button</string>
    <string name="btn_message">Message button</string>
    <string name="btn_video_call">Video call button</string>
</resources>
