<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/textViewLinearOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_default"
        android:text="@string/linear_option"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/textViewGridOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_default"
        android:text="@string/grid_option"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/textViewStaggeredGridOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_default"
        android:text="@string/staggered_grid_option"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/textViewMultipleListenersOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_default"
        android:text="@string/multiple_listeners"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/textViewGesturesOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_default"
        android:text="@string/gestures_option"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/textViewSelectionOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_default"
        android:text="@string/selections"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/textViewPaginationOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_default"
        android:text="@string/pagination"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="?android:textColorPrimary" />

    <TextView
        android:id="@+id/textViewSearchOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/margin_default"
        android:text="@string/search"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        app:drawableTint="?android:textColorPrimary" />

</LinearLayout>
