<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <ImageView
        android:id="@+id/imageViewItemContacts"
        android:layout_width="@dimen/size_chat_photo"
        android:layout_height="@dimen/size_chat_photo"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:contentDescription="@string/photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewItemContactsName"
        android:layout_width="@dimen/size_constrained"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_small"
        android:ellipsize="end"
        android:lines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonItemContactsVideoCall"
        app:layout_constraintStart_toEndOf="@+id/imageViewItemContacts"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Julian Lopéz" />

    <ImageButton
        android:id="@+id/imageButtonItemContactsPhone"
        android:layout_width="@dimen/size_icon_button"
        android:layout_height="@dimen/size_icon_button"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_phone"
        app:tint="?android:textColorPrimary"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/imageButtonItemContactsMessage"
        android:layout_width="@dimen/size_icon_button"
        android:layout_height="@dimen/size_icon_button"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageButtonItemContactsPhone"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_message"
        app:tint="?android:textColorPrimary"
        tools:ignore="RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/imageButtonItemContactsVideoCall"
        android:layout_width="@dimen/size_icon_button"
        android:layout_height="@dimen/size_icon_button"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_video_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageButtonItemContactsMessage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_videocam"
        app:tint="?android:textColorPrimary"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
